syntax = "proto3";

package todo;

message Empty {}

message Todo {
    required int32 id = 1; 
    required string title = 2;
    optional string body = 3;
}

message TodoIdRequest {
    int32 id = 1;
}

message TodoList {
    repeated Todo todos = 1;
}

service TodoService {
    rpc GetTodo (TodoIdRequest) returns (Todo)  {}
    rpc ListTodos (Empty) returns (TodoList) {}
    rpc InsertTodo (Todo) returns (Empty) {}
    rpc DeleteTodo (TodoIdRequest) returns (Empty) {}
    rpc WatchTodos (Empty) returns (stream Todo) {} 
}
